--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,55 +19,12 @@ on:
     types: [opened, synchronize, reopened]
 env:
   RUN_IDENTIFIER: recipestest-${{ github.run_id }}-${{ github.run_attempt }}
+  APP_NAME: local-dev-recipe-app
+  APP_NAMESPACE: local-dev-recipe-app
 jobs:
   test:
     name: "Recipe tests"
     runs-on: [ubuntu-latest]
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - name: mongodatabases
-            app: dsrp-resources-mongodb-recipe
-            namespace: dsrp-resources-mongodb-recipe-app
-            path: ./tests/mongodatabases.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: sqldatabases
-            app: dsrp-resources-sqldb-recipe
-            namespace: dsrp-resources-sqldb-recipe-app
-            path: ./tests/sqldatabases.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: rediscaches
-            app: dsrp-resources-redis-recipe
-            namespace: dsrp-resources-redis-recipe-app
-            path: ./tests/rediscaches.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: rabbitmqqueues
-            app: msgrp-resources-rabbitmq-recipe
-            namespace: msgrp-resources-rabbitmq-default-recipe-app
-            path: ./tests/rabbitmqqueues.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: secretstores
-            app: daprrp-rs-secretstore-recipe
-            namespace: daprrp-rs-secretstore-recipe
-            path: ./tests/secretstores.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: statestores
-            app: daprrp-rs-sts-recipe
-            namespace: daprrp-rs-sts-recipe
-            path: ./tests/statestores.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: pubsubbrokers
-            app: dpsb-recipe-app
-            namespace: dpsb-recipe-app
-            path: ./tests/pubsubbrokers.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-          - name: test-local-dev-recipes
-            app: local-dev-recipe-app
-            namespace: local-dev-recipe-app
-            path: ./tests/test-local-dev-recipes.bicep
-            args: --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
-
     steps:
       - name: Generate output variables
         id: gen-id
@@ -128,35 +85,35 @@ jobs:
           rad env switch default
       - name: Deploy app
         if: steps.gen-id.outputs.RUN_TEST == 'true'
-        id: deploy-app
-        run: rad deploy ${{ matrix.path }} ${{ matrix.args }}
+        id: deploy-app --parameters magpieimage="ghcr.io/radius-project/magpiego:latest"
+        run: rad deploy ./tests/test-local-dev-recipes.bicep 
       - name: Wait for all pods to be ready
         if: steps.gen-id.outputs.RUN_TEST == 'true'
         id: wait-for-pods
         run: |
-          label="radapp.io/application=${{ matrix.app }}"
-          kubectl wait --for=condition=Ready pod -l $label -n ${{ matrix.namespace }} --timeout=5m
+          label="radapp.io/application=${APP_NAME}"
+          kubectl wait --for=condition=Ready pod -l $label -n ${APP_NAMESPACE} --timeout=5m
       - name: Get Pod logs for failed tests
         id: get-pod-logs
         if: failure() && (steps.deploy-app.outcome == 'failure' || steps.wait-for-pods.outcome == 'failure')
         run: |
           # Create pod-logs directory
-          mkdir -p recipe-tests/pod-logs/${{ matrix.name }}
+          mkdir -p recipe-tests/pod-logs/local_dev_recipe_test_container_logs
           # Get pod logs and save to file
-          label="radapp.io/application=${{ matrix.app }}"
-          pod_names=($(kubectl get pods -l $label -n ${{ matrix.namespace }} -o jsonpath='{.items[*].metadata.name}'))
+          label="radapp.io/application=${APP_NAME}"
+          pod_names=($(kubectl get pods -l $label -n ${APP_NAMESPACE} -o jsonpath='{.items[*].metadata.name}'))
           for pod_name in "${pod_names[@]}"; do
-            kubectl logs $pod_name -n ${{ matrix.namespace }} > recipe-tests/pod-logs/${{ matrix.name }}/${pod_name}.txt
+            kubectl logs $pod_name -n ${APP_NAMESPACE} > recipe-tests/pod-logs/local_dev_recipe_test_container_logs/${pod_name}.txt
           done
-          echo "Pod logs saved to recipe-tests/pod-logs/${{ matrix.name }}/"
+          echo "Pod logs saved to recipe-tests/pod-logs/local_dev_recipe_test_container_logs/"
           # Get kubernetes events and save to file
-          kubectl get events -n ${{ matrix.namespace }} > recipe-tests/pod-logs/${{ matrix.name }}/events.txt
+          kubectl get events -n ${APP_NAMESPACE} > recipe-tests/pod-logs/local_dev_recipe_test_container_logs/events.txt
       - name: Upload Pod logs for failed tests
         uses: actions/upload-artifact@v3
         if: failure() && steps.get-pod-logs.outcome == 'success'
         with:
-          name: ${{ matrix.name }}-pod-logs
-          path: recipe-tests/pod-logs/${{ matrix.name }}
+          name: local_dev_recipe_test_container_logs-pod-logs
+          path: recipe-tests/pod-logs/local_dev_recipe_test_container_logs
           retention-days: 30
           if-no-files-found: error
   
