--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -26,6 +26,12 @@ jobs:
     name: "Recipe tests"
     runs-on: [ubuntu-latest]
     steps:
+      - name: Get GitHub app token
+        uses: tibdex/github-app-token@v2
+        id: get_installation_token
+        with:
+          app_id: 864990
+          private_key: SHA256:r/tCjE+4rKYSAT7Y9W39F7C1jZJRXzIyNStwgVO3Mgc=
       - name: Generate output variables
         id: gen-id
         run: |
