--- a/.github/workflows/validate-bicep.yaml
+++ b/.github/workflows/validate-bicep.yaml
@@ -35,21 +35,19 @@ jobs:
     name: Validate Bicep Code
     runs-on: ubuntu-latest
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Parse release version and set environment variables
-      run: python ./.github/scripts/get_release_version.py
-    - name: Download rad-bicep
-      run: |
-        ./.github/scripts/curl-with-retries.sh https://get.radapp.dev/tools/bicep-extensibility/${{ env.REL_CHANNEL }}/linux-x64/rad-bicep --output rad-bicep
-        chmod +x rad-bicep
-        ./rad-bicep --version
-    - name: Verify Bicep files
-      run: ./.github/scripts/validate-bicep.sh
-      env: 
-        BICEP_PATH: .
-    - name: Write error to summary
-      if: ${{ failure() }}
-      run: |
-        echo "## Bicep validation failed" >> $GITHUB_STEP_SUMMARY
-        echo "One or more Bicep files have failed validation. Please ensure you do not have any Bicep errors. Visit https://docs.radapp.dev/getting-started/install/ to download and install the Bicep VS Code extension to assist with validation." >> $GITHUB_STEP_SUMMARY
+      - name: Setup and verify bicep CLI
+        run: |
+          curl -Lo rad-bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
+          chmod +x ./rad-bicep
+          ./rad-bicep --version
+      - name: Check out repo
+        uses: actions/checkout@v4
+      - name: Verify Bicep files
+        run: ./.github/scripts/validate-bicep.sh
+        env: 
+          BICEP_PATH: .
+      - name: Write error to summary
+        if: ${{ failure() }}
+        run: |
+          echo "## Bicep validation failed" >> $GITHUB_STEP_SUMMARY
+          echo "One or more Bicep files have failed validation. Please ensure you do not have any Bicep errors. Visit https://docs.radapp.dev/getting-started/install/ to download and install the Bicep VS Code extension to assist with validation." >> $GITHUB_STEP_SUMMARY
