--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -96,10 +96,16 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
+    - name: Set up ORAS
+      uses: oras-project/setup-oras@v1
+      with:
+        version: '1.2.0'
+    - name: Verify ORAS installation
+      run: oras version
     - name: Download rad CLI
       run: |
         echo "Downloading latest rad CLI"
-        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash
+        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
