--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -43,7 +43,13 @@ jobs:
       uses: actions/checkout@v3
     - name: Parse release version and set environment variables
       run: python ./.github/scripts/get_release_version.py
-    - name: Download latest rad CLI
+    - name: Set up ORAS
+      uses: oras-project/setup-oras@v1
+      with:
+        version: '1.2.0'
+    - name: Verify ORAS installation
+      run: oras version
+    - name: Download rad CLI
       run: |
         echo "Downloading latest rad CLI"
         wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
