--- a/bicepconfig.json
+++ b/bicepconfig.json
@@ -1,14 +1,9 @@
 {
     "experimentalFeaturesEnabled": {
-        "extensibility": true,
-        "extensionRegistry": true,
-        "dynamicTypeLoading": true
+        "extensibility": true
     },
     "extensions": {
         "radius": "br:biceptypes.azurecr.io/radius:latest",
         "aws": "br:biceptypes.azurecr.io/aws:latest"
-    },
-    "cloud": {
-        "credentialPrecedence": [ "Environment" ]
     }
 }
