--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,1 @@
-# These owners are the maintainers and approvers of this repo
-*       @radius-project/maintainers-recipes @radius-project/approvers-recipes
+# See the owners for this repo at .github/CODEOWNERS
