ci(workflows): pin actions to full sha
Signed-off-by: Dariusz Porowski <3431813+DariuszPorowski@users.noreply.github.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,13 +1,15 @@
+# yaml-language-server: $schema=https://www.schemastore.org/github-workflow.json
+---
 name: Test Recipes
 
 on:
   workflow_dispatch:
-      inputs:
-        version:
-          description: 'Radius version number to use (e.g. 0.1.0, 0.1.0-rc1, edge). Defaults to edge.'
-          required: false
-          default: 'edge'
-          type: string
+    inputs:
+      version:
+        description: "Radius version number to use (e.g. 0.1.0, 0.1.0-rc1, edge). Defaults to edge."
+        required: false
+        default: "edge"
+        type: string
   push:
     branches:
       - v*.*
@@ -17,10 +19,12 @@ on:
       - ".github/workflows/**"
   pull_request:
     types: [opened, synchronize, reopened]
+
 env:
   RUN_IDENTIFIER: recipestest-${{ github.run_id }}-${{ github.run_attempt }}
   APP_NAME: local-dev-recipe-app
   APP_NAMESPACE: local-dev-recipe-app
+
 jobs:
   test:
     name: "Recipe tests"
@@ -31,21 +35,27 @@ jobs:
         run: |
           # Set output variables to be used in the other jobs
           echo "RUN_IDENTIFIER=${RUN_IDENTIFIER}" >> $GITHUB_OUTPUT
+
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
       - name: Setup Node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
           node-version: 16
+
       - name: Download k3d
         run: wget -q -O - https://raw.githubusercontent.com/k3d-io/k3d/main/install.sh | bash
+
       - name: Create k3d cluster
         # Map localhost port 80 on the external load balancer, and disable traefik and the internal load balancer.
         run: k3d cluster create --agents 2 -p "80:80@loadbalancer" --k3s-arg "--disable=traefik@server:*" --k3s-arg "--disable=servicelb@server:*" --registry-create reciperegistry:51351
+
       - name: Install Dapr
         run: |
           helm repo add dapr https://dapr.github.io/helm-charts/
           helm install dapr dapr/dapr --version=1.12 --namespace dapr-system --create-namespace --wait
+
       - name: Download rad CLI
         run: |
           RADIUS_VERSION="${{ inputs.version }}"
@@ -54,6 +64,7 @@ jobs:
           fi
           chmod +x ./.github/scripts/install-radius.sh
           ./.github/scripts/install-radius.sh $RADIUS_VERSION
+
       - name: Publish Recipes
         run: |
           files_list=$(ls "local-dev" | grep '\.bicep$')
@@ -62,6 +73,7 @@ jobs:
             recipeName="${file%.*}"
             rad bicep publish --file local-dev/$file --target br:localhost:51351/recipes/local-dev/$recipeName:latest --plain-http
           done
+
       - name: Initialize default environment
         run: |
           rad install kubernetes --set rp.publicEndpointOverride=localhost
@@ -70,14 +82,17 @@ jobs:
           rad group switch default
           rad env create default
           rad env switch default
+
       - name: Deploy app
         id: deploy-app
         run: rad deploy ./tests/test-local-dev-recipes.bicep --parameters magpieimage="ghcr.io/radius-project/magpiego:latest" --parameters registry="reciperegistry:5000" --parameters version="latest"
+
       - name: Wait for all pods to be ready
         id: wait-for-pods
         run: |
           label="radapp.io/application=${APP_NAME}"
           kubectl rollout status deployment -l $label -n ${APP_NAMESPACE} --timeout=90s
+
       - name: Get Pod logs for failed tests
         id: get-pod-logs
         if: failure() && (steps.deploy-app.outcome == 'failure' || steps.wait-for-pods.outcome == 'failure')
@@ -93,8 +108,9 @@ jobs:
           echo "Pod logs saved to recipe-tests/pod-logs/local_dev_recipe_test_container_logs/"
           # Get kubernetes events and save to file
           kubectl get events -n ${APP_NAMESPACE} > recipe-tests/pod-logs/local_dev_recipe_test_container_logs/events.txt
+
       - name: Upload Pod logs for failed tests
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4 # v5.0.0
         if: failure() && steps.get-pod-logs.outcome == 'success'
         with:
           name: local_dev_recipe_test_container_logs-pod-logs
