--- a/.github/workflows/publish-recipes.yaml
+++ b/.github/workflows/publish-recipes.yaml
@@ -4,7 +4,7 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-#    
+#
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
@@ -14,6 +14,8 @@
 # limitations under the License.
 # ------------------------------------------------------------
 
+# yaml-language-server: $schema=https://www.schemastore.org/github-workflow.json
+---
 name: Publish Recipes
 
 on:
@@ -39,29 +41,35 @@ jobs:
       contents: read
       packages: write
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Parse release version and set environment variables
-      run: python ./.github/scripts/get_release_version.py
-    - name: Set up ORAS
-      uses: oras-project/setup-oras@v1
-      with:
-        version: '1.2.0'
-    - name: Verify ORAS installation
-      run: oras version
-    - name: Download rad CLI
-      run: |
-        echo "Downloading latest rad CLI"
-        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Publish Recipes to GHCR
-      # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
-      run: ./.github/scripts/publish-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
+      - name: Check out repo
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
+      - name: Parse release version and set environment variables
+        run: python ./.github/scripts/get_release_version.py
+
+      - name: Set up ORAS
+        uses: oras-project/setup-oras@22ce207df3b08e061f537244349aac6ae1d214f6 # v1.2.4
+        with:
+          version: "1.2.0"
+
+      - name: Verify ORAS installation
+        run: oras version
+
+      - name: Download rad CLI
+        run: |
+          echo "Downloading latest rad CLI"
+          wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish Recipes to GHCR
+        # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
+        run: ./.github/scripts/publish-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
 
   delete-dev:
     name: Delete GHCR recipes - Dev
@@ -72,19 +80,22 @@ jobs:
       contents: read
       packages: write
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Parse release version and set environment variables
-      run: python ./.github/scripts/get_release_version.py
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Delete Recipes from GHCR
-      # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
-      run: ./.github/scripts/delete-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
+      - name: Check out repo
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
+      - name: Parse release version and set environment variables
+        run: python ./.github/scripts/get_release_version.py
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Delete Recipes from GHCR
+        # Uses REL_VERSION as the recipe version so PR builds result in a `pr-<pr number>` tag
+        run: ./.github/scripts/delete-recipes.sh radius-project dev/recipes ${{ env.REL_VERSION }}
 
   # This is where we can add integration tests in the future
 
@@ -92,35 +103,41 @@ jobs:
     if: github.event_name != 'pull_request'
     name: Publish Recipes to GHCR - Public
     runs-on: ubuntu-latest
-    environment: 
+    environment:
       name: Public
     permissions:
       contents: read
       packages: write
     steps:
-    - name: Check out repo
-      uses: actions/checkout@v3
-    - name: Parse release version and set environment variables
-      run: python ./.github/scripts/get_release_version.py
-    - name: Set up ORAS
-      uses: oras-project/setup-oras@v1
-      with:
-        version: '1.2.0'
-    - name: Verify ORAS installation
-      run: oras version
-    - name: Download rad CLI
-      run: |
-        echo "Downloading latest rad CLI"
-        wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
-    - name: Login to GitHub Container Registry
-      uses: docker/login-action@v2
-      with:
-        registry: ghcr.io
-        username: ${{ github.actor }}
-        password: ${{ secrets.GITHUB_TOKEN }}
-    - name: Publish Recipes to GHCR
-      run: |
-        ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_CHANNEL }}
-        if [ "${{ env.REL_TAG }}" != "${{ env.REL_CHANNEL }}" ]; then
-          ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_TAG }}
-        fi
+      - name: Check out repo
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
+      - name: Parse release version and set environment variables
+        run: python ./.github/scripts/get_release_version.py
+
+      - name: Set up ORAS
+        uses: oras-project/setup-oras@22ce207df3b08e061f537244349aac6ae1d214f6 # v1.2.4
+        with:
+          version: "1.2.0"
+
+      - name: Verify ORAS installation
+        run: oras version
+
+      - name: Download rad CLI
+        run: |
+          echo "Downloading latest rad CLI"
+          wget -q "${{ env.RAD_CLI_URL }}" -O - | /bin/bash -s edge
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Publish Recipes to GHCR
+        run: |
+          ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_CHANNEL }}
+          if [ "${{ env.REL_TAG }}" != "${{ env.REL_CHANNEL }}" ]; then
+            ./.github/scripts/publish-recipes.sh radius-project recipes ${{ env.REL_TAG }}
+          fi
