--- a/.github/workflows/validate-bicep.yaml
+++ b/.github/workflows/validate-bicep.yaml
@@ -4,7 +4,7 @@
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-#    
+#
 #     http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
@@ -14,6 +14,8 @@
 # limitations under the License.
 # ------------------------------------------------------------
 
+# yaml-language-server: $schema=https://www.schemastore.org/github-workflow.json
+---
 name: Validate Bicep Code
 
 on:
@@ -40,12 +42,15 @@ jobs:
           curl -Lo rad-bicep https://github.com/Azure/bicep/releases/latest/download/bicep-linux-x64
           chmod +x ./rad-bicep
           ./rad-bicep --version
+
       - name: Check out repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@93cb6efe18208431cddfb8368fd83d5badbf9bfd # v5.0.1
+
       - name: Verify Bicep files
         run: ./.github/scripts/validate-bicep.sh
-        env: 
+        env:
           BICEP_PATH: .
+
       - name: Write error to summary
         if: ${{ failure() }}
         run: |
