--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -56,6 +56,14 @@ jobs:
           helm repo add dapr https://dapr.github.io/helm-charts/
           helm install dapr dapr/dapr --version=1.12 --namespace dapr-system --create-namespace --wait
 
+      - name: Install ORAS
+        uses: oras-project/setup-oras@22ce207df3b08e061f537244349aac6ae1d214f6 # v1.2.4
+        with:
+          version: "1.2.0"
+
+      - name: Verify ORAS installation
+        run: oras version
+
       - name: Download rad CLI
         run: |
           RADIUS_VERSION="${{ inputs.version }}"
